--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Khan Academy</title> 
   <link rel="icon" type="image/x-icon" href="/favicon.png">
     <style type="text/css"> 
+      <a>This is a web version of UBG Ultra. There will be slow loading speeds.</a>
         html { 
             overflow: auto; 
         } 
